# project-andrewkwolek

./: CMakeLists.txt  README.md  proposal.md
config/: LL-HD-Camera.yaml
include/: CameraManager.hpp  MavlinkManager.hpp
include/common/: mavlink_msg_hil_actuator_controls.hpp
include/minimal/: mavlink.h
include/standard/: mavlink.h  standard.h
src/: CameraManager.cpp  DataManager.cpp  MavlinkManager.cpp  PingManager.cpp  Processor.cpp  main.cpp  video_capture.cpp
src/include/blueos-slam/: DataManager.hpp  PingManager.hpp  Processor.hpp  settings.hpp  typedefs.hpp
src/include/blueos-slam/common/: common.h  common.hpp  mavlink.h
src/include/blueos-slam/minimal/: minimal.h
